src/parser.output
Terminals which are not used

   ERROR_TOKEN


State 43 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement_list statement
    3               | /* empty */

    4 statement: END_STMT
    5          | expression END_STMT
    6          | PRINT expression END_STMT
    7          | INPUT identifier END_STMT
    8          | if_statement
    9          | compound_statement
   10          | error END_STMT

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement optional_else_statement

   12 optional_else_statement: ELSE statement
   13                        | /* empty */

   14 compound_statement: BEGIN_CS statement_list END_CS

   15 expression: equal_expression

   16 equal_expression: expression EQUAL assign_expression
   17                 | assign_expression

   18 assign_expression: identifier ASSIGN assign_expression
   19                  | concat_expression

   20 concat_expression: concat_expression CONCAT simple_expression
   21                  | simple_expression

   22 simple_expression: identifier
   23                  | string
   24                  | OPEN_PAR expression CLOSE_PAR

   25 identifier: ID

   26 string: STRING


Terminals, with rules where they appear

$end (0) 0
error (256) 10
ERROR_TOKEN (258)
IF (259) 11
ELSE (260) 12
PRINT (261) 6
INPUT (262) 7
ASSIGN (263) 18
EQUAL (264) 16
CONCAT (265) 20
END_STMT (266) 4 5 6 7 10
OPEN_PAR (267) 11 24
CLOSE_PAR (268) 11 24
BEGIN_CS (269) 14
END_CS (270) 14
ID (271) 25
STRING (272) 26


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
program (19)
    on left: 1, on right: 0
statement_list (20)
    on left: 2 3, on right: 1 2 14
statement (21)
    on left: 4 5 6 7 8 9 10, on right: 2 11 12
if_statement (22)
    on left: 11, on right: 8
optional_else_statement (23)
    on left: 12 13, on right: 11
compound_statement (24)
    on left: 14, on right: 9
expression (25)
    on left: 15, on right: 5 6 11 16 24
equal_expression (26)
    on left: 16 17, on right: 15
assign_expression (27)
    on left: 18 19, on right: 16 17 18
concat_expression (28)
    on left: 20 21, on right: 19 20
simple_expression (29)
    on left: 22 23 24, on right: 20 21
identifier (30)
    on left: 25, on right: 7 18 22
string (31)
    on left: 26, on right: 23


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list .
    2 statement_list: statement_list . statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    $end  reduce using rule 1 (program)

    statement           go to state 13
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    assign_expression   go to state 18
    concat_expression   go to state 19
    simple_expression   go to state 20
    identifier          go to state 21
    string              go to state 22


state 3

    0 $accept: program $end .

    $default  accept


state 4

   10 statement: error . END_STMT

    END_STMT  shift, and go to state 23


state 5

   11 if_statement: IF . OPEN_PAR expression CLOSE_PAR statement optional_else_statement

    OPEN_PAR  shift, and go to state 24


state 6

    6 statement: PRINT . expression END_STMT

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 25
    equal_expression   go to state 17
    assign_expression  go to state 18
    concat_expression  go to state 19
    simple_expression  go to state 20
    identifier         go to state 21
    string             go to state 22


state 7

    7 statement: INPUT . identifier END_STMT

    ID  shift, and go to state 11

    identifier  go to state 26


state 8

    4 statement: END_STMT .

    $default  reduce using rule 4 (statement)


state 9

   24 simple_expression: OPEN_PAR . expression CLOSE_PAR

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 27
    equal_expression   go to state 17
    assign_expression  go to state 18
    concat_expression  go to state 19
    simple_expression  go to state 20
    identifier         go to state 21
    string             go to state 22


state 10

   14 compound_statement: BEGIN_CS . statement_list END_CS

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 28


state 11

   25 identifier: ID .

    $default  reduce using rule 25 (identifier)


state 12

   26 string: STRING .

    $default  reduce using rule 26 (string)


state 13

    2 statement_list: statement_list statement .

    $default  reduce using rule 2 (statement_list)


state 14

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


state 15

    9 statement: compound_statement .

    $default  reduce using rule 9 (statement)


state 16

    5 statement: expression . END_STMT
   16 equal_expression: expression . EQUAL assign_expression

    EQUAL     shift, and go to state 29
    END_STMT  shift, and go to state 30


state 17

   15 expression: equal_expression .

    $default  reduce using rule 15 (expression)


state 18

   17 equal_expression: assign_expression .

    $default  reduce using rule 17 (equal_expression)


state 19

   19 assign_expression: concat_expression .
   20 concat_expression: concat_expression . CONCAT simple_expression

    CONCAT  shift, and go to state 31

    $default  reduce using rule 19 (assign_expression)


state 20

   21 concat_expression: simple_expression .

    $default  reduce using rule 21 (concat_expression)


state 21

   18 assign_expression: identifier . ASSIGN assign_expression
   22 simple_expression: identifier .

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 22 (simple_expression)


state 22

   23 simple_expression: string .

    $default  reduce using rule 23 (simple_expression)


state 23

   10 statement: error END_STMT .

    $default  reduce using rule 10 (statement)


state 24

   11 if_statement: IF OPEN_PAR . expression CLOSE_PAR statement optional_else_statement

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 33
    equal_expression   go to state 17
    assign_expression  go to state 18
    concat_expression  go to state 19
    simple_expression  go to state 20
    identifier         go to state 21
    string             go to state 22


state 25

    6 statement: PRINT expression . END_STMT
   16 equal_expression: expression . EQUAL assign_expression

    EQUAL     shift, and go to state 29
    END_STMT  shift, and go to state 34


state 26

    7 statement: INPUT identifier . END_STMT

    END_STMT  shift, and go to state 35


state 27

   16 equal_expression: expression . EQUAL assign_expression
   24 simple_expression: OPEN_PAR expression . CLOSE_PAR

    EQUAL      shift, and go to state 29
    CLOSE_PAR  shift, and go to state 36


state 28

    2 statement_list: statement_list . statement
   14 compound_statement: BEGIN_CS statement_list . END_CS

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    END_CS    shift, and go to state 37
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 13
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    assign_expression   go to state 18
    concat_expression   go to state 19
    simple_expression   go to state 20
    identifier          go to state 21
    string              go to state 22


state 29

   16 equal_expression: expression EQUAL . assign_expression

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    assign_expression  go to state 38
    concat_expression  go to state 19
    simple_expression  go to state 20
    identifier         go to state 21
    string             go to state 22


state 30

    5 statement: expression END_STMT .

    $default  reduce using rule 5 (statement)


state 31

   20 concat_expression: concat_expression CONCAT . simple_expression

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    simple_expression  go to state 39
    identifier         go to state 40
    string             go to state 22


state 32

   18 assign_expression: identifier ASSIGN . assign_expression

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    assign_expression  go to state 41
    concat_expression  go to state 19
    simple_expression  go to state 20
    identifier         go to state 21
    string             go to state 22


state 33

   11 if_statement: IF OPEN_PAR expression . CLOSE_PAR statement optional_else_statement
   16 equal_expression: expression . EQUAL assign_expression

    EQUAL      shift, and go to state 29
    CLOSE_PAR  shift, and go to state 42


state 34

    6 statement: PRINT expression END_STMT .

    $default  reduce using rule 6 (statement)


state 35

    7 statement: INPUT identifier END_STMT .

    $default  reduce using rule 7 (statement)


state 36

   24 simple_expression: OPEN_PAR expression CLOSE_PAR .

    $default  reduce using rule 24 (simple_expression)


state 37

   14 compound_statement: BEGIN_CS statement_list END_CS .

    $default  reduce using rule 14 (compound_statement)


state 38

   16 equal_expression: expression EQUAL assign_expression .

    $default  reduce using rule 16 (equal_expression)


state 39

   20 concat_expression: concat_expression CONCAT simple_expression .

    $default  reduce using rule 20 (concat_expression)


state 40

   22 simple_expression: identifier .

    $default  reduce using rule 22 (simple_expression)


state 41

   18 assign_expression: identifier ASSIGN assign_expression .

    $default  reduce using rule 18 (assign_expression)


state 42

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR . statement optional_else_statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 43
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    assign_expression   go to state 18
    concat_expression   go to state 19
    simple_expression   go to state 20
    identifier          go to state 21
    string              go to state 22


state 43

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement . optional_else_statement

    ELSE  shift, and go to state 44

    ELSE      [reduce using rule 13 (optional_else_statement)]
    $default  reduce using rule 13 (optional_else_statement)

    optional_else_statement  go to state 45


state 44

   12 optional_else_statement: ELSE . statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 46
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    assign_expression   go to state 18
    concat_expression   go to state 19
    simple_expression   go to state 20
    identifier          go to state 21
    string              go to state 22


state 45

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement optional_else_statement .

    $default  reduce using rule 11 (if_statement)


state 46

   12 optional_else_statement: ELSE statement .

    $default  reduce using rule 12 (optional_else_statement)
